# timus-problem-solving

./: CMakeLists.txt  README.md
001-basics/: 1005.cpp  1296.cpp  2025.cpp
002-sorting/: 1207.cpp  1604.cpp  1726.cpp
003-structures/: 1494.cpp  1521.cpp  1628.cpp
004-graph/: 1080.cpp  1450.cpp
1 - Basics/: 1005.cpp  1296.cpp
1_module/: 1005.cpp  1296.cpp  2025.cpp
2 - Sorting/: 1207.cpp  1604.cpp  1726.cpp
2_module/: 1726.cpp
3_module/: 1494.cpp  1521.cpp  1628.cpp
4 - Graph/: 1450.cpp
4_module/: 1080.cpp  1160.cpp
