cmake_minimum_required(VERSION 3.9)
project(Timus)

include_directories(lib/googletest/googletest/include)
add_subdirectory(lib/googletest)

set(CMAKE_CXX_STANDARD 14)

add_executable(Timus-1005 1_module/1005.cpp)
add_executable(Timus-1296 1_module/1296.cpp)
add_executable(Timus-2025 1_module/2025.cpp)
add_executable(Timus-1155 1_module/1155.cpp)
add_executable(Timus-1401 1_module/1401.cpp)
add_executable(Timus-1207 2_module/1207.cpp)
add_executable(Timus-1322 2_module/1322.cpp)
add_executable(Timus-1444 2_module/1444.cpp)
add_executable(Timus-1604 2_module/1604.cpp)
add_executable(Timus-1726 2_module/1726.cpp)
add_executable(Timus-1067 3_module/1067.cpp)
add_executable(Timus-1494 3_module/1494.cpp)
add_executable(Timus-1521 3_module/1521.cpp)
add_executable(Timus-1628 3_module/1628.cpp)
add_executable(Timus-1650 3_module/1650.cpp)
add_executable(Timus-1080 4_module/1080.cpp)
add_executable(Timus-1160 4_module/1160.cpp)
add_executable(Timus-1162 4_module/1162.cpp)
add_executable(Timus-1450 4_module/1450.cpp)
add_executable(Timus-1806 4_module/1806.cpp)

target_link_libraries(Timus-1005 gtest)
target_link_libraries(Timus-1296 gtest)
target_link_libraries(Timus-2025 gtest)
target_link_libraries(Timus-1155 gtest)
target_link_libraries(Timus-1401 gtest)
target_link_libraries(Timus-1207 gtest)
target_link_libraries(Timus-1322 gtest)
target_link_libraries(Timus-1444 gtest)
target_link_libraries(Timus-1604 gtest)
target_link_libraries(Timus-1726 gtest)
target_link_libraries(Timus-1067 gtest)
target_link_libraries(Timus-1494 gtest)
target_link_libraries(Timus-1521 gtest)
target_link_libraries(Timus-1628 gtest)
target_link_libraries(Timus-1650 gtest)
target_link_libraries(Timus-1080 gtest)
target_link_libraries(Timus-1160 gtest)
target_link_libraries(Timus-1162 gtest)
target_link_libraries(Timus-1450 gtest)
target_link_libraries(Timus-1806 gtest)